--- a/_posts/2016-11-14-new.markdown
+++ b/_posts/2016-11-14-new.markdown
@@ -1,11 +1,9 @@
 ---
 layout: post
-title:  "A New Post!"
+title:  "A New Post"
 date:   2016-11-14 19:26:16 -0500
 categories: jekyll update
 ---
 ## A New Post
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
-
-New!
